# NexusSilicon

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md
.github/workflows/: ci.yml
apps/mfe/: main.cpp
benchmarks/: asap7_cells.lef  asap7_tech.lef  asap7_typical.lib  ibm01.pl
config/pdks/asap7/: manifest.json
config/pdks/sky130/: manifest.json
config/schemas/: evidence-graph.json  finding.json  stage-result.json
docs/: RELEASE_STATUS.md  agentic_eda_architecture.md
include/mfe/analysis/: routing_estimator.hpp
include/mfe/core/: dec.hpp  geometry.hpp  half_edge.hpp  mesh.hpp  metric.hpp  ricci_flow.hpp
include/mfe/cts/: dme_cts.hpp
include/mfe/diagnostics/: congestion.hpp  diagnostic.hpp
include/mfe/eco/: eco_planner.hpp  eco_validator.hpp
include/mfe/flow/: contracts.hpp  evidence_graph.hpp  manifest.hpp  openrcx_importer.hpp  opensta_importer.hpp  physical_flow.hpp  rtl_importer.hpp
include/mfe/geodesic/: fmm_router.hpp
include/mfe/io/: artifacts.hpp  bookshelf.hpp  gdsii_writer.hpp  lef_def.hpp  netlist_importer.hpp  oasis_writer.hpp  routed_def_writer.hpp
include/mfe/logic/: sat_window.hpp
include/mfe/pdk/: technology.hpp
include/mfe/thermo/: thermal_solver.hpp  thermal_stack.hpp
include/mfe/transport/: legalizer.hpp  ot_placer.hpp  power_diagram.hpp
projects/gcd_demo/: project.yaml
projects/gcd_demo/constraints/: gcd.sdc
projects/gcd_demo/rtl/: gcd.sv
src/analysis/: routing_estimator.cpp
src/core/: dec.cpp  mesh.cpp  metric.cpp  ricci_flow.cpp
src/cts/: dme_cts.cpp
src/diagnostics/: congestion.cpp
src/eco/: eco_planner.cpp  eco_validator.cpp
src/flow/: contracts.cpp  evidence_graph.cpp  manifest.cpp  openrcx_importer.cpp  opensta_importer.cpp  physical_flow.cpp  rtl_importer.cpp
src/geodesic/: fmm_router.cpp
src/io/: artifacts.cpp  bookshelf.cpp  gdsii_writer.cpp  lef_def.cpp  netlist_importer.cpp  oasis_writer.cpp  routed_def_writer.cpp
src/logic/: sat_window.cpp
src/pdk/: technology.cpp
src/thermo/: thermal_solver.cpp
src/transport/: legalizer.cpp  ot_placer.cpp  power_diagram.cpp
tests/: agent_cli_test.py  bookshelf_tests.cpp  core_tests.cpp  evidence_graph_tests.cpp  flow_contract_tests.cpp  ot_tests.cpp  ricci_tests.cpp  routing_tests.cpp  sat_cts_tests.cpp  thermal_tests.cpp
tests/data/: flow_smoke.sv  sample.lef
tests/integration/: netlist_importer_tests.cpp  physical_flow_tests.cpp  timing_eco_tests.cpp
tests/unit/: manifest_tests.cpp  rtl_importer_tests.cpp
tools/: benchmark_harness.py  bootstrap-third-party.ps1  build-cudd.ps1  build-klayout.ps1  build-openrcx.md  build-openroad.ps1  build-opensta.ps1  build-yosys.ps1  generate_mock_pl.py  generate_plots.py  mfe.ps1
tools/adapters/: README.md  run-klayout.ps1  run-magic.ps1  run-openrcx.ps1  run-openrcx.tcl  run-opensta.ps1  run-verible.ps1  run-yosys.ps1
tools/agent/: mfe_agent.py
tools/flow/: run-flow.ps1
